// Vitest Snapshot v1

exports[`insertion (a) > should append characters in most front of empty line 1`] = `
"Dear John,
hello world
I hope this letter finds you well. It's been a while since we've spoken, and I wanted to take this opportunity to catch up with you.

First of all, I wanted to congratulate you on your recent promotion! It's well-deserved, and I know you've worked hard to get to where you are. I'm really happy for you.

Secondly, I wanted to tell you about some exciting news on my end. I've decided to start my own business! It's been a dream of mine for a long time, and I finally took the leap. It's been a lot of work, but also very rewarding.

Anyway, I'd love to hear what's new with you. Let's catch up soon over a cup of coffee?

Take care,

Jane
"
`;

exports[`insertion (a) > should restore empty line placeholder if nothing appended to the empty line 1`] = `
"Dear John,
 
I hope this letter finds you well. It's been a while since we've spoken, and I wanted to take this opportunity to catch up with you.

First of all, I wanted to congratulate you on your recent promotion! It's well-deserved, and I know you've worked hard to get to where you are. I'm really happy for you.

Secondly, I wanted to tell you about some exciting news on my end. I've decided to start my own business! It's been a dream of mine for a long time, and I finally took the leap. It's been a lot of work, but also very rewarding.

Anyway, I'd love to hear what's new with you. Let's catch up soon over a cup of coffee?

Take care,

Jane
"
`;

exports[`insertion (o) > should append new line after current line 1`] = `
"Dear John,
 

I hope this letter finds you well. It's been a while since we've spoken, and I wanted to take this opportunity to catch up with you.

First of all, I wanted to congratulate you on your recent promotion! It's well-deserved, and I know you've worked hard to get to where you are. I'm really happy for you.

Secondly, I wanted to tell you about some exciting news on my end. I've decided to start my own business! It's been a dream of mine for a long time, and I finally took the leap. It's been a lot of work, but also very rewarding.

Anyway, I'd love to hear what's new with you. Let's catch up soon over a cup of coffee?

Take care,

Jane
"
`;

exports[`insertion (o) > should append new line before current line 1`] = `
" 
Dear John,

I hope this letter finds you well. It's been a while since we've spoken, and I wanted to take this opportunity to catch up with you.

First of all, I wanted to congratulate you on your recent promotion! It's well-deserved, and I know you've worked hard to get to where you are. I'm really happy for you.

Secondly, I wanted to tell you about some exciting news on my end. I've decided to start my own business! It's been a dream of mine for a long time, and I finally took the leap. It's been a lot of work, but also very rewarding.

Anyway, I'd love to hear what's new with you. Let's catch up soon over a cup of coffee?

Take care,

Jane
"
`;
